cabal-version:       2.2
name:                hexaturn
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md

common deps
  build-depends:       base >= 4.7 && < 5
                     , gloss >= 1.13.1.2 && < 1.14
                     , containers >= 0.6 && < 0.7
                     , sort >= 1.0 
                     , extra >= 1.7 && < 1.8
                     , ghc >= 8.8 && < 8.9
                     , mtl >= 2.2

library
  import:              deps
  hs-source-dirs:      lib
  default-language:    Haskell2010
  exposed-modules:
    GameParser
    Def
    Render
    Methods
    ErrorParser

executable hexaturn
  import:              deps
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hexaturn
